# Fudge-Cpp

./: .gitignore  Makefile.am  NEWS  README  TODO  configure.ac
examples/: .gitignore  Makefile  prettyprint.cpp  simple.cpp
include/: Makefile.am
include/fudge-cpp/: Makefile.am  codec.hpp  datetime.hpp  datetimebase.hpp  envelope.hpp  exception.hpp  field.hpp  fudge.hpp  message.hpp  optional.hpp  string.hpp
scripts/: git2changelog.py
src/: Makefile.am  codec.cpp  datetime.cpp  envelope.cpp  exception.cpp  field.cpp  fudge.cpp  message.cpp  string.cpp
tests/: .gitignore  Makefile.am  simpletest.cpp  simpletest.hpp  test_codec.cpp  test_datetime.cpp  test_exception.cpp  test_message.cpp  test_optional.cpp  test_string.cpp  test_user_types.cpp
